[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/energy_ball.png" type="Texture" id=1]
[ext_resource path="res://Projectile/Vacuum/vacuum_bomb/vac_bomb_static.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 63.0

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.517647, 0, 0, 1 )
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 0.056, 0.056 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
